unpackaged/main/default/objects/WAMessage__c/fields/AgentName__c.field-meta.xml
<CustomField>
    <fullName>AgentName__c</fullName>
    <label>Agent Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>