unpackaged/main/default/objects/WAMessage__c/fields/ImageID__c.field-meta.xml
<CustomField>
    <fullName>ImageID__c</fullName>
    <label>Image ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>