unpackaged/main/default/objects/WAMessage__c/fields/ImageSHA256__c.field-meta.xml
<CustomField>
    <fullName>ImageSHA256__c</fullName>
    <label>Image  sha256</label>
    <type>TextArea</type>
</CustomField>