unpackaged/main/default/objects/WAMessage__c/fields/ImageType__c.field-meta.xml
<CustomField>
    <fullName>ImageType__c</fullName>
    <label>Image Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>