unpackaged/main/default/objects/WAMessage__c/fields/MessageID__c.field-meta.xml
<CustomField>
    <fullName>MessageID__c</fullName>
    <externalId>true</externalId>
    <label>Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>