unpackaged/main/default/objects/WAMessage__c/fields/MessageType__c.field-meta.xml
<CustomField>
    <fullName>MessageType__c</fullName>
    <label>Message Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>