unpackaged/main/default/objects/WAMessage__c/fields/ParentMessageID__c.field-meta.xml
<CustomField>
    <fullName>ParentMessageID__c</fullName>
    <label>Parent Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>