unpackaged/main/default/objects/WAMessage__c/fields/Reaction__c.field-meta.xml
<CustomField>
    <fullName>Reaction__c</fullName>
    <label>Reaction</label>
    <length>10</length>
    <type>Text</type>
</CustomField>