unpackaged/main/default/objects/WAMessage__c/fields/VideoID__c.field-meta.xml
<CustomField>
    <fullName>VideoID__c</fullName>
    <label>Video ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>