unpackaged/main/default/objects/WAMessage__c/fields/VideoSHA256__c.field-meta.xml
<CustomField>
    <fullName>VideoSHA256__c</fullName>
    <label>Video sha256</label>
    <length>255</length>
    <type>Text</type>
</CustomField>