unpackaged/main/default/objects/WAMessage__c/fields/VideoType__c.field-meta.xml
<CustomField>
    <fullName>VideoType__c</fullName>
    <label>Video Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>